# RobotControl

./: .gitignore  CMakeLists.txt  LEGO_MINDSTORMS_NXT_Direct_commands.docx  MainPage.h  RobotApp.cpp  RobotTestApp.cpp  doxyfile
Threading/: NIGLegoThread.h  NIGLegoThread.txx  NIGMultiThread.cpp  NIGMultiThread.h  NIGOpenCVThread.h  NIGOpenCVThread.txx  NIGReconstructionThread.h  NIGReconstructionThread.txx  NIGTiepieThread.h  NIGTiepieThread.txx  NIGTrakstarThread.h  NIGTrakstarThread.txx  NIGViewingThread.h  NIGViewingThread.txx  legocontrol.cpp  legocontrol.h
